--- a/Curs8/Tema-acasa.html
+++ b/Curs8/Tema-acasa.html
@@ -21,29 +21,29 @@
     //     console.log("numerele nu sunt egale", n, nNou);
     //   }
 
-    //   //problema 2
-    //   var n, m, numarCifre, cifra;
-    //   n = 1235;
-    //   mInit = 6789;
-    //   mFinal = 6789;
-    //   numarCifra = 0;
-    //   while (mFinal > 0) {
-    //     cifra = mFinal % 10;
-    //     numarCifra++;
-    //     mFinal = parseInt(mFinal / 10);
-    //   }
-    //   console.log(n * Math.pow(10, numarCifra) + mInit);
+      //problema 2
+      // var n, m, numarCifre, cifra;
+      // n = 1235;
+      // mInit = 6789;
+      // mFinal = 6789;
+      // numarCifra = 0;
+      // while (mFinal > 0) {
+      //   cifra = mFinal % 10;
+      //   numarCifra++;
+      //   mFinal = parseInt(mFinal / 10);
+      // }
+      // console.log(n * Math.pow(10, numarCifra) + mInit);
 
-    //   //problema 3- while
-    //   var n = 2;
-    //   var m = 8;
-    //   var putere = 1;
-    //   var i = 1;
-    //   while (i <= m) {
-    //     i++;
-    //     putere *= n;
-    //   }
-    //   console.log(putere);
+      //problema 3- while
+      // var n = 2;
+      // var m = 8;
+      // var putere = 1;
+      // var i = 1;
+      // while (i <= m) {
+      //   i++;
+      //   putere *= n;
+      // }
+      // console.log(putere);
 
     //   //problema 3 - for
     //   var a = 2;
@@ -123,22 +123,22 @@
     // console.log(nMin, nMax);
 
     // problema 8- impartirea unui numar cu un nr par de cifre
-    var nr, nrCifre, n1, n2, putere, putereAleatoare;
-    nrCifre = 0;
-    nr = Math.floor(Math.random() * (Math.pow(10, 12) - 1 ));
-    nrInit = nr;
-    while(nr > 0){
-      nrCifre++;
-      nr = parseInt(nr / 10);
-    }
-    if (nrCifre % 2 == 0){
-      putere = nrCifre / 2;
-      n1 = parseInt(nrInit / Math.pow(10, putere));
-      n2 = nrInit - n1 * Math.pow(10, putere);
-      console.log(nrInit, nrCifre, n1, n2);
-    } else {
-      console.log(nrInit, nrCifre, "numar de cifre impar");
-    }
+    // var nr, nrCifre, n1, n2, putere, putereAleatoare;
+    // nrCifre = 0;
+    // nr = Math.floor(Math.random() * (Math.pow(10, 12) - 1 ));
+    // nrInit = nr;
+    // while(nr > 0){
+    //   nrCifre++;
+    //   nr = parseInt(nr / 10);
+    // }
+    // if (nrCifre % 2 == 0){
+    //   putere = nrCifre / 2;
+    //   n1 = parseInt(nrInit / Math.pow(10, putere));
+    //   n2 = nrInit - n1 * Math.pow(10, putere);
+    //   console.log(nrInit, nrCifre, n1, n2);
+    // } else {
+    //   console.log(nrInit, nrCifre, "numar de cifre impar");
+    // }
 </script>
 
 <body>
