--- a/curs12/tema-sortat-patratel-aleator.html
+++ b/curs12/tema-sortat-patratel-aleator.html
@@ -43,14 +43,14 @@
     }
   </style>
   <script>
-    // var v = [];
+    var v = [];
     // var nr;
     // for (var i = 0; i < 1000; i++) {
     //   nr = Math.random();
     //   v.push(nr);
     // }
     // console.log(v);
-    console.log("------Max si Min---------");
+    // console.log("------Max si Min---------");
     // function findMaxMin(v) {
     //   var max = null;
     //   var min = null;
@@ -64,7 +64,7 @@
     //   }
     //   return [min, max];
     // }
-    //console.log(findMaxMin(v));
+    // console.log(findMaxMin(v));
 
     console.log("------cele mai mari 10 numere---------");
 
