--- a/curs16/tema16-2-3.html
+++ b/curs16/tema16-2-3.html
@@ -88,7 +88,7 @@
         }
         function arrowClick(e) {
             let col = ids[1];
-            console.log(col);
+            console.log("-----------------",col);
             let destCol = document.getElementById(`ul-${col}`);
 
             console.log(this);
