--- a/curs17/slider.html
+++ b/curs17/slider.html
@@ -67,7 +67,7 @@
                 if (x + 50 >= WindowWidth) {
                     x = WindowWidth - 50;
                 }
-                var a = Math.round(x * 100 / (WindowWidth - 50)) + valMin;
+                var a = Math.round(x * 100 / (WindowWidth - 50)) ;
                 console.log(a);
                 var val = Math.round(a * valMax / 100);
                 console.log(val);
