--- a/curs-udacity.html
+++ b/curs-udacity.html
@@ -52,52 +52,137 @@
       //     return linie;
       // }
 
-      var test = [
-        12,
-        929,
-        11,
-        3,
-        199,
-        1000,
-        7,
-        1,
-        24,
-        37,
-        4,
-        19,
-        300,
-        3775,
-        299,
-        36,
-        209,
-        148,
-        169,
-        299,
-        6,
-        109,
-        20,
-        58,
-        139,
-        59,
-        3,
-        1,
-        139
-      ];
-      var newArray = [];
-      function add(test) {
-        for (var i = 0; i < test.length; i++) {
-          if (test[i] % 3 == 0) {
-            test[i] += 100;
-            newArray.push(test[i]);
-          }
-        }
-        return newArray;
-      }
-      console.log(add(test));
+      // var test = [
+      //   12,
+      //   929,
+      //   11,
+      //   3,
+      //   199,
+      //   1000,
+      //   7,
+      //   1,
+      //   24,
+      //   37,
+      //   4,
+      //   19,
+      //   300,
+      //   3775,
+      //   299,
+      //   36,
+      //   209,
+      //   148,
+      //   169,
+      //   299,
+      //   6,
+      //   109,
+      //   20,
+      //   58,
+      //   139,
+      //   59,
+      //   3,
+      //   1,
+      //   139
+      // ];
+      // var newArray = [];
+      // function add(test) {
+      //   for (var i = 0; i < test.length; i++) {
+      //     if (test[i] % 3 == 0) {
+      //       test[i] += 100;
+      //       newArray.push(test[i]);
+      //     }
+      //   }
+      //   return newArray;
+      // }
+      // console.log(add(test));
       // if (test[i] % 3 === 0) {
       //   test[i] += 100;
       //   newArray.push(test[i]);
       //  newArray.push(test[i]);
+
+      // var flavor = "vanilla";
+      // var vessel = "cone";
+      // var toppings = "peanuts";
+
+      // if (
+      //   (flavor == "vanilla" || flavor == "chocolate") &&
+      //   (vessel == "cone" || vessel == "bowl") &&
+      //   (toppings == "sprinkles" || toppings == "peanuts")
+      // ) {
+      //   console.log(
+      //     "I'd like two scoops of chocolate ice cream in a cone with sprinkles."
+      //   );
+      // }
+      var shirtWidth = 18; // size S (small)
+      var shirtLength = 29; // size M (medium)
+      var shirtSleeve = 8.47; // size M (medium)
+
+      if (
+        18 <= shirtWidth &&
+        shirtWidth < 20 &&
+        28 <= shirtLength &&
+        shirtLength < 29 &&
+        8.13 <= shirtSleeve &&
+        shirtSleeve < 8.38
+      ) {
+        console.log("S");
+      } else {
+        if (
+          20 <= shirtWidth &&
+          shirtWidth < 22 &&
+          29 <= shirtLength &&
+          shirtLength < 30 &&
+          8.38 <= shirtSleeve &&
+          shirtSleeve < 8.63
+        ) {
+          console.log("M");
+        } else {
+          if (
+            22 <= shirtWidth &&
+            shirtWidth < 24 &&
+            30 <= shirtLength &&
+            shirtLength < 31 &&
+            8.63 <= shirtSleeve &&
+            shirtSleeve < 8.88
+          ) {
+            console.log("L");
+          } else {
+            if (
+              24 <= shirtWidth &&
+              shirtWidth < 26 &&
+              31 <= shirtLength &&
+              shirtLength < 33 &&
+              8.88 <= shirtSleeve &&
+              shirtSleeve < 9.63
+            ) {
+              console.log("XL");
+            } else {
+              if (
+                26 <= shirtWidth &&
+                shirtWidth < 28 &&
+                33 <= shirtLength &&
+                shirtLength < 34 &&
+                9.63 <= shirtSleeve &&
+                shirtSleeve < 10.13
+              ) {
+                console.log("XXL");
+              } else {
+                if (
+                  28 <= shirtWidth &&
+                  shirtWidth < 30 &&
+                  34 <= shirtLength &&
+                  shirtLength < 35 &&
+                  10.13 <= shirtSleeve &&
+                  shirtSleeve < 10.63
+                ) {
+                  console.log("XXXL");
+                } else {
+                  console.log("N/A");
+                }
+              }
+            }
+          }
+        }
+      }
     </script>
   </head>
 
