--- a/curs20/cerculet-instalatie-jQuery.html
+++ b/curs20/cerculet-instalatie-jQuery.html
@@ -4,18 +4,9 @@
     <title>Instalatie-jQuery</title>
     <script src="jquery-3.4.1.min.js"></script>
     <style>
-      .container {
-        border-radius: 50%;
-        width: 50px;
-        height: 50px;
-        position: relative;
-        vertical-align: middle;
-        display: inline-block;
-      }
-
       .div1 {
         border-radius: 50%;
-        position: absolute;
+        position: relative;
         width: 20px;
         height: 20px;
         background: cornflowerblue;
@@ -24,38 +15,17 @@
         margin-left: 15px;
         display: inline-block;
       }
-
-      .div2 {
-        border-radius: 50%;
-        position: absolute;
-        width: 20px;
-        height: 20px;
-        background: #4747de;
-        opacity: 0;
-        margin-top: 15px;
-        margin-left: 15px;
-        display: inline-block;
-        transition: opacity 0.2s;
-        /* box-shadow: -4px 3px 55px 16px rgba(71,71,222,0.83); */
-      }
     </style>
 
     <script>
       document.addEventListener("DOMContentLoaded", start);
-      var divs1 = [];
-      var interval;
-      var nrTraversal = 0;
-      var l = 0;
+
       var n = 10;
       function start() {
-        for (var i = 0; i < 10; i++) {
-          var container = document.createElement("div");
-          container.className = "container";
-          document.body.appendChild(container);
-
-          var div1 = document.createElement("div");
-          div1.className = "div1";
-          container.appendChild(div1);
+        for (var i = 0; i < n; i++) {
+          var div1 = $("<div></div>");
+          div1.addClass("div1");
+          $("body").append(div1);
         }
       }
       $(document).ready(function() {
@@ -64,22 +34,8 @@
             .animate({ opacity: "0.2" })
             .animate({ opacity: "1" });
         }
-        animatie();
+        setInterval(animatie, 1000);
       });
-
-      // function changeBackground() {
-      //   if (nrTraversal % 2 == 0) {
-      //     divs2[l].style.opacity = 1;
-      //   } else {
-      //     divs2[l].style.opacity = 0;
-      //   }
-      //   l++;
-
-      //   if (l >= n) {
-      //     l = 0;
-      //     nrTraversal++;
-      //   }
-      // }
     </script>
   </head>
 
