--- a/Curs4/tooltip1.html
+++ b/Curs4/tooltip1.html
@@ -34,7 +34,7 @@
         left: 50%;
         transform: translateX(-50%);
         white-space: nowrap;
-        overflow: hidden;
+        /* overflow: hidden; */
         text-overflow: ellipsis;
         text-align: center:
     }
