--- a/curs21/liste-jQuery.html
+++ b/curs21/liste-jQuery.html
@@ -72,16 +72,17 @@
               index = noLists;
             }
             this.remove();
-            var leftList = $('#"list" + (index - 1)')[0];
+            console.log(list);
+            var leftList = $("#list" + (index - 1));
             console.log(leftList);
-            leftList.appendChild(this);
+            leftList.append(this);
           } else if ($(event.target).hasClass("rightArrow")) {
             if (index == noLists - 1) {
               index = -1;
             }
             this.remove();
-            var leftList = document.getElementById("list" + (index + 1));
-            leftList.appendChild(this);
+            var leftList = $("#list" + (index + 1));
+            leftList.append(this);
           }
         }
       });
