--- a/curs22/tetris.html
+++ b/curs22/tetris.html
@@ -128,7 +128,7 @@
             }
           }
         }
-        if (scoreDiv.innerHtml != score) {
+        if (scoreDiv.innerHTML != score) {
           scoreDiv.innerHTML = score;
         }
       }
