--- a/javascript.info.html
+++ b/javascript.info.html
@@ -1,173 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>Document</title>
+  </head>
+  <script>
+    // function checkAge(age) {
+    //   age >= 18 ? true : confirm("Did parents allow you?");
+    // }
+    // checkAge(17);
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>Document</title>
-</head>
-<script>
-  // function checkAge(age) {
-  //   age >= 18 ? true : confirm("Did parents allow you?");
-  // }
-  // checkAge(17);
+    // function checkAge(age) {
+    //   return age >= 18 || confirm("Did parents allow you?");
+    // }
+    // checkAge(19);
 
-  // function checkAge(age) {
-  //   return age >= 18 || confirm("Did parents allow you?");
-  // }
-  // checkAge(19);
+    // function min(a, b) {
+    //   return a > b ? b : a;
+    // }
+    // console.log(min(4, 8));
+    // console.log(min(12, 8));
 
-  // function min(a, b) {
-  //   return a > b ? b : a;
-  // }
-  // console.log(min(4, 8));
-  // console.log(min(12, 8));
+    // function pow(x, n) {
+    //   let result = x;
+    //   for (var i = 1; i < n; i++) {
+    //     result *= x;
+    //   }
+    //   return result;
+    // }
+    // let x = prompt("x?");
+    // let n = prompt("n?");
+    // alert(pow(x, n));
 
-  // function pow(x, n) {
-  //   let result = x;
-  //   for (var i = 1; i < n; i++) {
-  //     result *= x;
-  //   }
-  //   return result;
-  // }
-  // let x = prompt("x?");
-  // let n = prompt("n?");
-  // alert(pow(x, n));
+    // function makeLine(length) {
+    //   var line = "";
+    //   for (var j = 1; j <= length; j++) {
+    //     line += "* ";
+    //   }
+    //   return line + "\n";
+    // }
 
-  // function makeLine(length) {
-  //   var line = "";
-  //   for (var j = 1; j <= length; j++) {
-  //     line += "* ";
-  //   }
-  //   return line + "\n";
-  // }
+    // function buildTriangle(n) {
+    //   var height = "";
+    //   for (var i = 1; i < n; i++) {
+    //     height += makeLine(i);
+    //   }
+    //   return height;
+    // }
 
-  // function buildTriangle(n) {
-  //   var height = "";
-  //   for (var i = 1; i < n; i++) {
-  //     height += makeLine(i);
-  //   }
-  //   return height;
-  // }
+    // console.log(buildTriangle(10));
 
-  // console.log(buildTriangle(10));
+    // function declaration that takes in two arguments: a function for displaying
+    // a message, along with a name of a movie
+    // function movies(messageFunction, name) {
+    //   messageFunction(name);
+    // }
 
-  // function declaration that takes in two arguments: a function for displaying
-  // a message, along with a name of a movie
-  // function movies(messageFunction, name) {
-  //   messageFunction(name);
-  // }
+    // // call the movies function, pass in the function and name of movie
+    // movies(function displayFavorite(movieName) {
+    //   console.log("My favorite movie is " + movieName);
+    // }, "Finding Nemo");
 
-  // // call the movies function, pass in the function and name of movie
-  // movies(function displayFavorite(movieName) {
-  //   console.log("My favorite movie is " + movieName);
-  // }, "Finding Nemo");
+    // function emotions(myString, myFunc) {
+    //   console.log("I am " + myString + ", " + myFunc(2));
+    // }
 
-  // function emotions(myString, myFunc) {
-  //   console.log("I am " + myString + ", " + myFunc(2));
-  // }
+    // emotions("happy", function myFunc(n) {
+    //   var ha = "";
+    //   for (i = 1; i <= n; i++) {
+    //     ha += "ha";
+    //     if ((i = n)) {
+    //       ha += "ha!";
+    //     }
+    //   }
+    //   return ha;
+    // });
+    // document.addEventListener("DOMContentLoaded", start);
+    // function start(){
+    //   var button = document.getElementById('hider')
+    //   button.addEventListener("click", hideYourSelf);
+    //   function hideYourSelf(e) {
+    //     this.hidden = true;
+    //   }
+    // }
+    // var user = {};
+    // console.log(user);
+    // user.name = "John";
+    // user.surname = "Smith";
 
-  // emotions("happy", function myFunc(n) {
-  //   var ha = "";
-  //   for (i = 1; i <= n; i++) {
-  //     ha += "ha";
-  //     if ((i = n)) {
-  //       ha += "ha!";
-  //     }
-  //   }
-  //   return ha;
-  // });
-  // document.addEventListener("DOMContentLoaded", start);
-  // function start(){
-  //   var button = document.getElementById('hider')
-  //   button.addEventListener("click", hideYourSelf);
-  //   function hideYourSelf(e) {
-  //     this.hidden = true;
-  //   }
-  // }
-// var user = {};
-// console.log(user);
-// user.name = "John";
-// user.surname = "Smith";
+    // user.name = "Pete";
+    // delete user.name;
+    // delete user.surname;
 
-// user.name = "Pete";
-// delete user.name;
-// delete user.surname;
+    // function isEmpty(user){
+    //   for (let prop in user){
+    //     return false;
+    //   }
+    //   return true;
+    // }
+    // alert(isEmpty(user));
 
-// function isEmpty(user){
-//   for (let prop in user){
-//     return false; 
-//   } 
-//   return true;
-// }
-// alert(isEmpty(user));
+    // let salaries = {
+    //   // John: 100,
+    //   // Ann: 160,
+    //   // Pete: 130
+    // }
 
+    // let sum = 0;
+    // for (var key in salaries){
+    //   sum += salaries[key];
+    // }
 
-// let salaries = {
-//   // John: 100,
-//   // Ann: 160,
-//   // Pete: 130
-// }
+    // alert(sum);
 
+    // let menu = {
+    //   width: 400,
+    //   height: 200,
+    //   title: "My menu"
+    // }
 
-// let sum = 0;
-// for (var key in salaries){
-//   sum += salaries[key];
-// }
+    // function multiplyNumberic(menu){
+    //   for (var key in menu){
+    //       if (typeof(menu[key]) === "number"){
+    //       menu[key] *= 2;
+    //     }
+    //   }
+    //   console.log(menu);
+    // }
+    // multiplyNumberic(menu);
 
-// alert(sum);
+    // for (let i = 2 ; i <= 10; i++){
+    //   if (i % 2 == 0)  alert (i) ;
+    // }
 
+    // let i = 1;
+    // while(i <= 10){
+    //   i++;
+    //   if (i % 2 == 0){
+    //     alert(i);
+    //   }
+    // }
 
-// let menu = {
-//   width: 400,
-//   height: 200,
-//   title: "My menu"
-// }
+    // let numberEntered
+    // console.log(numberEntered);
+    // do {numberEntered = prompt("introdu un numar mai mare ca 100", "numar");}
+    // while((numberEntered <= 100 && numberEntered));
 
-// function multiplyNumberic(menu){
-//   for (var key in menu){
-//       if (typeof(menu[key]) === "number"){
-//       menu[key] *= 2;
-//     }
-//   }
-//   console.log(menu);
-// }
-// multiplyNumberic(menu);
+    // let n = 10;
 
+    // nextPrime:
+    // for (i = 2; i <= n; i++){
+    //   for (j = 2 ; j < i; j++){
+    //     if(i % j == 0) continue nextPrime;
+    //   }
+    //   alert(i);
+    // }
 
-// for (let i = 2 ; i <= 10; i++){
-//   if (i % 2 == 0)  alert (i) ; 
-// }
+    // function checkAge(age) {
+    //   if (age > 18) {
+    //     return true;
+    //   } else {
+    //     return confirm("Did parents allow you?");
+    //   }
+    // }
+    // checkAge(18);
 
-// let i = 1;
-// while(i <= 10){
-//   i++;
-//   if (i % 2 == 0){
-//     alert(i);
-//   }
-// }
+    function checkAge(age) {
+      age >= 18 ? true : confirm("Did parents allow you?");
+    }
 
-// let numberEntered 
-// console.log(numberEntered);
-// do {numberEntered = prompt("introdu un numar mai mare ca 100", "numar");}
-// while((numberEntered <= 100 && numberEntered));
+    checkAge(15);
+  </script>
 
-
-
-let n = 10;
-
-nextPrime:
-for (i = 2; i <= n; i++){
-  for (j = 2 ; j < i; j++){
-    if(i % j == 0) continue nextPrime;
-  }
-  alert(i);
-}
-</script>
-
-<body>
- 
-</body>
-
+  <body></body>
 </html>
